fix: style alignments

--- a/web/scss/features/anim-widget.scss
+++ b/web/scss/features/anim-widget.scss
@@ -90,7 +90,7 @@
     .wv-icon-case {
       border: 2px solid #333;
       margin: 0;
-      height: 42px;
+      height: 44px;
       width: 112px;
     }
   }
